[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "xts-utils"
dynamic = ["version"]
description = "Toolkit for Xshell .xts"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Lixsp11"}
]
keywords = ["xshell", "xts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = []

[project.scripts]
xts-utils = "xts_utils.cli:main"

[project.urls]
Homepage = "https://github.com/Lixsp11/xts-utils"

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
ignore_missing_imports = true
warn_unused_ignores = false
